--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,13 +4,13 @@ on:
   push:
     branches: [ "gh-pages" ]
 
-  workflow_dispatch:
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
       - name: Run a one-line script
         env:
           VITE_APP_TOKEN: ${{ secrets.VITE_APP_TOKEN }}
+      - name: gh-pages for Github Action
+      - uses: axetroy/gh-pages-action@0.0.21
+
