--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,30 @@
-name: add env
+name: CI
 
-# Controls when the workflow will run
 on:
-  page_build:
-    branches: [ "gh-pages" ]
+  push:
+    branches:
+      - master
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Run a one-line script
-        run: echo Hello, world!
-        env: 
-          VITE_APP_TOKEN: ${{ secrets.VITE_APP_TOKEN}}
+    
+    - name: Checkout
+      uses: actions/checkout@v1
+
+    - name: Build
+      run: |
+        npm install
+        npm run build
+      env:
+        VITE_APP_TOKEN: ${{ secrets.VITE_APP_TOKEN }}
+
+    - name: Deploy
+      uses: JamesIves/github-pages-deploy-action@releases/v3
+      with:
+        GITHUB_TOKEN: ${{ secrets.VITE_APP_TOKEN }}
+        BRANCH: gh-pages
+        FOLDER: build
+
