--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,24 +7,18 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     steps:
-    
     - name: Checkout
       uses: actions/checkout@v1
-
     - name: Build
       run: |
         npm install
         npm run build
       env:
         VITE_APP_TOKEN: ${{ secrets.VITE_APP_TOKEN }}
-
     - name: Deploy
-      uses: JamesIves/github-pages-deploy-action@releases/v3
+      uses: JamesIves/github-pages-deploy-action@v4
       with:
-        GITHUB_TOKEN: ${{ secrets.VITE_APP_TOKEN }}
-        BRANCH: gh-pages
-        FOLDER: build
+        folder: dist 
 
