--- a/github user search/package.json
+++ b/github user search/package.json
@@ -1,13 +1,18 @@
 {
   "name": "github-user-search",
+  "homepage": "https://vladimirseoadv.github.io/github-user-search",
   "private": true,
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "gh-pages": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
